2009-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSDisplayServer.m: Fix typo
	* Headers/Additions/GNUstepGUI/GSDisplayServer.h: ditto
	* Source/NSWindow.m: ditto
	* Source/GSTheme.m: Make color handling more efficient
	* Headers/Additions/GNUstepGUI/GSTheme.h: ditto
	* Source/GSThemeDrawing.m: ditto
	* Source/NSScrollView.m: ditto

2009-01-31 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSToolTips.m: Fix retain/release problem.
	* Source/NSToolbar.m: Add exception handler round unsafe code.

2009-01-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSThemeTools.m: Add checks to prevent problems in the case
	where the control being drawn is actually smaller than the tiles used.
	* Headers/AppKit/NSScreen.h:
	* Source/NSScreen.m: Cache device description dictionary ... when
	debugging the problem with theme tools (which caused a loop to
	repeatedly composite the tile image instead of doing it once), I
	noticed that almost every time I stopped the app in gdb, it was in
	the process of creating a device description, strongly suggesting
	that this is actually quite a time consuming part of drawing
	images.

2009-01-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: Try to get behavior to match MacOS-X
	by moving call to -updateWindows to be done before getting the
	next event.  Updating is done only if it was flagged as needing
	to be done since the last update, but if we are in NSDefaultRunLoopMode
	or NSModalRunLoopMode we automatically set the flag before handling
	each event ... so unless the application explicitly turns it off,
	it's always done in these modes.
	Might fix #25384
	* Source/NSView.m: Invalidate tracking rects when they are removed
	from the view.
	Might fix #25385

2009-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSParagraphStyle.m: Fix all copying code to handle
	textBlocks and textLists correctly.

2009-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h