@@ -4811,12 +4811,17 @@ other than copy/paste or dragging. */
 	      if (cell != nil)
 		{
 		  NSRect cellFrame;
+      NSRect lfRect;
 
+      lfRect = [_layoutManager lineFragmentRectForGlyphAtIndex: startIndex
+                               effectiveRange: NULL];
 		  cellFrame.origin = [_layoutManager 
 				       locationForGlyphAtIndex: startIndex];
 		  cellFrame.size = [_layoutManager 
 				     attachmentSizeForGlyphAtIndex: startIndex];
 		  cellFrame.origin.y -= cellFrame.size.height;
+      cellFrame.origin.x += lfRect.origin.x;
+      cellFrame.origin.y += lfRect.origin.y;
 
 		  /* TODO: What about the insertion point ? */
 		  if ([cell wantsToTrackMouseForEvent: theEvent
